--- a/game.html
+++ b/game.html
@@ -19,6 +19,7 @@
         <!-- 场景文件 -->
         <script type="text/javascript" src="scene/scene_main/scene_main.js"></script>
         <script type="text/javascript" src="scene/scene_main/bird.js"></script>
+        <script type="text/javascript" src="scene/scene_main/pipe.js"></script>
         <script type="text/javascript" src="scene/scene_main/ground.js"></script>
         <script type="text/javascript" src="scene/scene_main/bg.js"></script>
 
